# rug-mas

./: .gitignore  Cargo.toml  README.md  default.toml  plot.fish  plot.py  plots.py
configs/: combined.toml  default.toml  friends.toml  influencers.toml  three-markets.toml
src/: agent.rs  config.rs  main.rs  market.rs  report.rs  simulation.rs  window.rs
