[package]
name = "rug-mas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
plotters = "0.3.1"
rand = "0.8.4"
rand_distr = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
