[package]
name = "rug-mas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
earcutr = "0.2.0"
plotters = "0.3.1"
plotters-backend = "0.3.2"
rand = "0.8.4"
rand_distr = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
smallvec = { version = "1.7.0", features = ["const_generics"] }
speedy2d = "1.1.2"
toml = "0.5.8"
